--- a/.bootmenu.cfg
+++ b/.bootmenu.cfg
@@ -1,8 +1,9 @@
-Fake shell,/,faketerm.bas,1
-CPM65,/CPM65,CPM65.NEO,1
-Tetris,/games,tetris.neo,
-Prophet client,/,prophet.neo,3
-Netinfo,/,netinfo.neo,
-Netsetup,/,netsetup.neo,
-Frogger,/games/frogger/,frogger.bas,
-Weather,/weather,weather.neo,
+Fake shell,/,faketerm.bas,10
+CPM65,/CPM65,CPM65.NEO,10
+Tetris,/games,tetris.neo,5
+Prophet client,/,prophet.neo,7
+Netinfo,/,netinfo.neo,7
+Netsetup,/,netsetup.neo,7
+Frogger,/games/frogger/,frogger.bas,5
+Weather,/weather,weather.neo,6
+Asteroids,/games/asteroids/,asteroids.bas,5
